--- a/themes/my7chakras/sass/_variables.scss
+++ b/themes/my7chakras/sass/_variables.scss
@@ -4,20 +4,7 @@ $base__space-unit: 1.5rem;
 
 // Colors
 
-$color__background-body: #fff;
-$color__text-main: #404040;
-
-$color__background-screen: #f1f1f1;
-$color__text-screen: #21759b;
-
-$color__background-hr: #ccc;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
-$color__border-abbr: #666;
-
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
+$text-color: #3F3F3F;
 
 // Typography
 
