--- a/themes/my7chakras/sass/_fonts.scss
+++ b/themes/my7chakras/sass/_fonts.scss
@@ -1,3 +1,178 @@
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-BlackItalic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-ExtraBoldItalic.ttf') format('truetype');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Mazzard H';
+    src: url('../../assets/fonts/mazzardH/MazzardH-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face { 
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-ThinItalic.ttf') format('truetype');
+    font-weight: 100;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-ExtraBoldItalic.ttf') format('truetype');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-SemiBoldItalic.ttf') format('truetype');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-MediumItalic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula';
+    src: url('../../assets/fonts/meticula/Meticula-ExtraLightItalic.ttf') format('truetype');
+    font-weight: 200;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula-OutlineItalic';
+    src: url('../../assets/fonts/meticula/Meticula-OutlineItalic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Meticula-Outline';
+    src: url('../../assets/fonts/meticula/Meticula-Outline.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
