--- a/themes/my7chakras/sass/_typography.scss
+++ b/themes/my7chakras/sass/_typography.scss
@@ -8,7 +8,7 @@ input,
 select,
 textarea {
 	color: $color__text-main;
-	font-family: $font__main;
+	font-family: $font-main;
 	@include font-size(1);
 	line-height: $font__line-height-body;
 }
