--- a/themes/my7chakras/sass/_variables.scss
+++ b/themes/my7chakras/sass/_variables.scss
@@ -5,9 +5,18 @@ $base__space-unit: 1.5rem;
 // Colors
 
 $text-color: #3F3F3F;
-$text-color: red;
+$purple: #323184;
+$pink: #AC5F80;
+$white: #fff;
 
 
+// Typography
+$font-main: 'Meticula',sans-serif;
+$font-button: 'Mazzard H',sans-serif;
+
+
+
+// Default 
 $color__background-body: #fff;
 $color__text-main: #404040;
 $color__background-screen: #f1f1f1;
@@ -19,9 +28,6 @@ $color__border-abbr: #666;
 $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
-
-// Typography
-
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
