--- a/themes/my7chakras/sass/_mixins.scss
+++ b/themes/my7chakras/sass/_mixins.scss
@@ -1,4 +1,3 @@
-// Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
 	font-size: ($sizeValue * 16) * 1px;
 	font-size: $sizeValue * 1rem;
@@ -9,4 +8,38 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+@mixin content-wrapper{
+	width: 1120px;
+    margin-right: auto;
+	margin-left: auto;
+}
+
+$sp: 415px; 
+$tb: 760px;
+$pc: 980px; 
+
+@mixin sp {
+  @media (max-width: $sp) {
+    @content;
+  }
+}
+
+@mixin tb {
+  @media (min-width: $sp) and (max-width: $pc) {
+    @content;
+  }
+}
+
+@mixin pc {
+  @media (min-width: $pc) {
+    @content;
+  }
+}
+
+@mixin pcandtb{
+  @media (min-width: $tb) {
+    @content;
+  }
 }
