--- a/themes/my7chakras/sass/_variables.scss
+++ b/themes/my7chakras/sass/_variables.scss
@@ -13,7 +13,16 @@ $red: #AC5F80;
 
 // Typography
 $font-main: 'Meticula',sans-serif;
-$font-button: 'Mazzard H',sans-serif;
+$font-heading: 'Mazzard H',sans-serif;
+$heading-size--pc: 55px;
+$heading-size--sp: 30px;
+$title-size--pc: 30px;
+$title-size--sp: 22px;
+$subtitle-size--pc: 20px;
+$subtitle-size--sp: 17px;
+$text-size--pc: 16px;
+$text-size--sp: 15px;
+
 
 
 
