--- a/themes/my7chakras/sass/_normalize.scss
+++ b/themes/my7chakras/sass/_normalize.scss
@@ -1,5 +1,5 @@
 html {
-	font-family: sans-serif;
+	font-family: $font-main;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust:     100%;
 }
@@ -63,10 +63,6 @@ dfn {
 	font-style: italic;
 }
 
-h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
-}
 
 mark {
 	background: #ff0;
