Add contact-form and business info

--- a/themes/my7chakras/sass/_mixins.scss
+++ b/themes/my7chakras/sass/_mixins.scss
@@ -43,3 +43,18 @@ $pc: 980px;
     @content;
   }
 }
+
+
+@mixin box-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+@mixin box-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+
