--- a/themes/my7chakras/sass/_forms.scss
+++ b/themes/my7chakras/sass/_forms.scss
@@ -9,25 +9,26 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
+	border-color: $purple;
 	border-radius: 3px;
-	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
+	background: $purple;
+	box-shadow: unset;
+	color: $white;
+	font-family: $font-heading;
+	font-size: 1.1rem;
 	line-height: 1;
 	padding: .6rem 1rem .4rem;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 
+
+
 	&:hover {
-		border-color: #ccc #bbb #aaa;
-		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
+
 	}
 
 	&:active,
 	&:focus {
-		border-color: #aaa #bbb #bbb;
-		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
+		
 	}
 }
 
@@ -53,8 +54,26 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-	padding: 3px;
+	
+	width: 100%;
+	height: 45px;
 }
+.wpcf7-validates-as-email{
+	padding: 12px 14px;
+}
+
+.wpcf7-form-control-wrap {
+    position: relative;
+	width: 64%;
+	@include tb{
+		width: 40%;
+	}
+	@include pc{
+		width: 40%;
+	}
+}
+
+
 
 textarea {
 	padding-left: 3px;
