add:episodes post style

--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -63,4 +63,17 @@
             width: 100%;
         }
     }
+    &__lists{
+
+    }
+    &__post{
+        &Img{
+            img{
+                width: 100%;
+            }
+        }
+        &Title{
+            
+        }
+    }
 }
