add: header desktop and desktop

--- a/themes/my7chakras/sass/style.scss
+++ b/themes/my7chakras/sass/style.scss
@@ -64,6 +64,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "media";
 
 @import "footer";
+@import "header";
 
 @import "page-templates";
 @import "episodes";
