--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -110,4 +110,27 @@
             }
         }
     }
+    &__pageNavi{
+        font-size: 24px;
+        .wp-pagenavi{
+            display: inline;
+            form{
+                display: inline;
+            }
+            select{
+            font-size: 24px;
+            padding: 10px;
+            height: 45px;
+            width: 46px;
+            background: transparent;
+            border: none;
+            box-shadow: 0 1px 10px #b1b1b1;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            line-height: 1;
+            }
+        }
+    }
 }
+
