--- a/themes/my7chakras/sass/_variables.scss
+++ b/themes/my7chakras/sass/_variables.scss
@@ -34,9 +34,9 @@ $color__background-hr: #ccc;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
+$color__link: #3f3f3f;
+$color__link-visited: #3f3f3f;
+$color__link-hover: #000000;
 $font__main: sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
