add:styled single.php

--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -106,3 +106,18 @@
         }
     }
 }
+
+.episode{
+    &__question{
+        ol{
+            margin-left: 0;
+            padding-left: 0;
+            @include spandtb{
+            list-style-type: none;
+        }
+        li{
+            margin-top: 10px;
+        }
+    }
+}
+}
