--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -132,5 +132,34 @@
             }
         }
     }
-}
+    &__post{
+        &Wrapper{
+            @include content-wrapper;
+        }
+        &Thumbnail{
+            position:relative;
+            width:100%;
+            height:180px;
+            overflow:hidden;
+            img{
+                width: 100%;
+                border-radius: 10px;
+                @include spandtb{
+                    position:absolute;
+                    top:50%;
+                    left:50%;
+                    transform:translate(-50%,-50%);
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+        &Text{
+            background-color: #2f41a4;
+            background-image: linear-gradient(90deg,rgba(0,0,0,.2),rgba(0,0,0,.2)),linear-gradient(122deg,#2f41a4 -58%,#323184 -18%,#4d449c 14%,#915990 46%,#ac5f80 79%,#ac5d5b 113%);
+            color: #ffffff;
+        }
+        }
+    }
 
