--- a/themes/my7chakras/sass/_variables.scss
+++ b/themes/my7chakras/sass/_variables.scss
@@ -1,6 +1,7 @@
 // Structure
 $base__space-unit: 1.5rem;
 
+
 // Colors
 $text-color: #3F3F3F;
 $purple: #323184;
@@ -20,6 +21,8 @@ $subtitle-size--sp: 17px;
 $text-size--pc: 16px;
 $text-size--sp: 15px;
 
+//Other
+$shadow: 0 1px 10px #b1b1b1;
 
 
 
