--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -137,16 +137,32 @@
     .post{
             &__wrapper{
                 @include content-wrapper;
+                margin-top: 40px;
+            }
+            &__title{
+                line-height: 1.2;
+                @include pc{
+                    margin-top: 20px;
+                    font-size: 32px;
+                    font-family: $font-heading;
+                }
+            }
+            &__num{
+                margin-bottom: 10px;
             }
             &__thumbnail{
                 position:relative;
                 width:100%;
-                height:180px;
+                height: 40vh;
                 overflow:hidden;
+                margin-bottom: 30px;
+                @include spandtb{
+                    height:29vh;
+                }
                 img{
                     width: 100%;
-                    border-radius: 10px;
                     @include spandtb{
+                        border-radius: 10px;
                         position:absolute;
                         top:50%;
                         left:50%;
@@ -157,14 +173,25 @@
                     }
                 }
             }
+            &__tag{
+                    color: $pink;
+                    a{
+                        color: $pink;
+                    }
+            }
             &__text{
-                background-color: #393771;
-                background-image:  linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(160deg, #393771 -38%, #3A3873 5%, #634B7B 33%, #915990 60%, #815373 79%, #8B5565 113%);
-                color: #ffffff;
-                position: relative;
-                padding: 50px 0 80px;
+                @include spandtb{
+                    background-color: #3B388C;
+                    background-image:  linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(160deg, #3B388C -38%, #3A3873 10%, #634B7B 36%, #915990 60%, #815373 79%, #8B5565 113%);
+                    color: #ffffff;
+                    position: relative;
+                    padding: 70px 0 120px;
+                }
             }
             &__white{
+                display: none;
+                @include spandtb{
+                display: block;
                 margin: 0;
                 position: absolute;
                 vertical-align: bottom;
@@ -173,11 +200,13 @@
                     display: block;
                 }
                 &--top{
-                    width: 103%;
-                    top: 0;
+                    width: 100.5%;
+                    top: -1px;
                 }
                 &--bottom{
                     bottom: -2px;
+                    width: 100%;
                 }
             }
+        }
     }
