--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -108,12 +108,24 @@
 }
 
 .episode{
+    &__heading{
+        margin-top: 30px;
+        font-size: 17px;
+    }
     &__question{
         @include content-wrapper;
+        h3{
+            @include pc{
+            font-size: 30px;
+            margin-bottom: 0;
+            margin-top: 60px;
+        }
+        }
         ol{
             margin-left: 0;
-            padding-left: 0;
+            padding-left: 20px;
             @include spandtb{
+            padding-left: 0;    
             list-style-type: none;
         }
         li{
@@ -122,7 +134,13 @@
     }
     .question{
         @include spandtb{
-             
+             display: none;
+        }
+    }
+    .colon{
+        display: none;
+        @include spandtb{
+            display: inline;
         }
     }
 }
