--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -209,4 +209,80 @@
                 }
             }
         }
+        &__footer{
+            @include content-wrapper;
+        }
+        .yarpp-related{
+            h3{
+                font-weight: normal;
+                font-size: 32px;
+            }
+            .yarpp-thumbnails-horizontal{
+                display: flex;
+                justify-content: space-between;
+            }
+            .yarpp-thumbnail{
+            border: none;
+            width: 28%!important;
+            position:relative;
+            width:100%;
+            height:270px;
+            overflow:hidden;
+            border-radius: 10px;
+            padding: 5px;
+            margin: 0;
+            box-shadow: $shadow;
+            img{
+                margin: 0;
+                position:absolute;
+                top:0;
+                left:50%;
+                transform:translate(-50%,0);
+                border-radius: 10px 10px 0 0;
+                object-fit: cover;
+                width: 100%;
+                height: 65%;
+            }
+        }
+        .yarpp-thumbnail-title{
+            margin-top: 180px;
+            font-weight: normal;
+            font-size: 17px;
+            width: 100%;
+            margin-bottom: 0;
+            margin-right: 0;
+            margin-left: 0;
+        }
+        }
+        .page-nav{
+            display: flex;
+            justify-content: space-between;
+            a{
+                width: 35%;
+                border-radius: 10px;
+                border: none;
+                position:relative;
+                height:132px;
+                overflow:hidden;
+                border-radius: 10px;
+                padding: 5px;
+                margin: 0;
+                box-shadow: $shadow;
+                img{
+                    opacity: 0.7;
+                    margin: 0;
+                    position:absolute;
+                    top:0;
+                    left:50%;
+                    transform:translate(-50%,0);
+                    border-radius: 10px 10px 0 0;
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                }
+                p{
+                    position: absolute;
+                }
+            }
+        }
     }
