--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -112,6 +112,8 @@
     }
     &__pageNavi{
         font-size: 24px;
+        text-align: center;
+        margin-bottom: 50px;
         .wp-pagenavi{
             display: inline;
             form{
