--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -79,8 +79,9 @@
             width: 100%;
         }
     }
-    &__lists{
-
+    &__info{
+        display: flex;
+        justify-content: space-between;
     }
     &__post{
         border-radius: 15px;
@@ -194,4 +195,39 @@
         }
     }
 }
+}
+
+.gnav {
+    display: flex;
+    height: 2rem;
+    margin: 0 auto;
+    width: 1000px;
+}
+.gnav > li {
+    width: 25%;
+}
+.gnav li {
+    list-style: none;
+    position: relative;
+}
+.gnav li a {
+    display: block;
+    height: 2rem;
+    line-height: 2rem;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+}
+
+.gnav li form {
+    height: 0;
+    overflow: hidden;
+    transition: .5s;
+}
+.gnav li form a {
+    border-top: 1px solid #eee;
+}
+.gnav li:hover > ul > form {
+    height: 2rem;
+    overflow: visible;
 }
