--- a/themes/my7chakras/sass/_about.scss
+++ b/themes/my7chakras/sass/_about.scss
@@ -1,3 +1,15 @@
+.bg-img {
+    background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Mask-Group-35.png);
+    height: 300px;
+    background-repeat: no-repeat;
+    background-position:right ;
+}
+
+h1{
+    position: absolute;
+    top: 200px;
+}
+
 h2{
     font-size: 17px;
     font-family: meticula;
