add:style pagination

--- a/themes/my7chakras/sass/_episodes.scss
+++ b/themes/my7chakras/sass/_episodes.scss
@@ -197,33 +197,38 @@
 }
 }
 
-// .gnav {
-//     height: 2rem;
-// }
-// .gnav > li {
-// }
-// .gnav li {
-//     list-style: none;
-//     position: relative;
-// }
-// .gnav li a {
-//     display: block;
-//     height: 2rem;
-//     line-height: 2rem;
-//     text-align: center;
-//     text-decoration: none;
-//     width: 100%;
-// }
+.gnav {
+    height: 2rem;
+}
+.gnav > li {
+}
+.gnav li {
+    list-style: none;
+    position: relative;
+}
+.gnav li p {
+    display: block;
+    height: 2rem;
+    line-height: 2rem;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+}
 
-// .gnav li li {
-//     height: 0;
-//     overflow: hidden;
-//     transition: .5s;
-// }
-// .gnav li li a {
-//     border-top: 1px solid #eee;
-// }
-// .gnav li:hover > ul > li {
-//     height: 2rem;
-//     overflow: visible;
-// }
+.gnav li li {
+    height: 0;
+    overflow: hidden;
+    transition: .5s;
+    background: #ffffff;
+    box-shadow: $shadow;
+}
+.gnav li li a {
+    border-top: 1px solid #eee;
+    &:hover{
+        color: $purple;
+    }
+}
+.gnav li:hover > ul > li {
+    height: 2rem;
+    overflow: visible;
+}
