--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -156,23 +156,25 @@
         display: block;
         width: auto;
         margin: 4px;
-        padding: 8px;
-        border: 1px solid #000;
+        padding: 8px 8px 7px;
+        border: 1px solid $purple;
         background-color: #fff;
         text-decoration: none;
         text-align: center;
         line-height: 16px;
+        color: $purple;
     }
     
     .pagination .pager{
         width: 32px;
+        border-radius: 50%;
     }
     
     .pagination a:hover,
     .pagination .current  {
         color: #fff;
-        border-color: #000;
-        background-color: #000;
+        border-color: $purple;
+        background-color: $purple;
     }
     
     .pagination a.prev {
@@ -181,8 +183,6 @@
     .pagination a.next {
         margin-left: 16px;
     }
-    .pagination a.first {}
-    .pagination a.last {}
     
     .pagination span.page_num {
         display: none;
@@ -267,48 +267,7 @@
         &__footer{
             @include content-wrapper;
         }
-        .yarpp-related{
-            h3{
-                font-weight: normal;
-                font-size: 32px;
-            }
-            .yarpp-thumbnails-horizontal{
-                display: flex;
-                justify-content: space-between;
-            }
-            .yarpp-thumbnail{
-            border: none;
-            width: 28%!important;
-            position:relative;
-            width:100%;
-            height:270px;
-            overflow:hidden;
-            border-radius: 10px;
-            padding: 5px;
-            margin: 0;
-            box-shadow: $shadow;
-            img{
-                margin: 0;
-                position:absolute;
-                top:0;
-                left:50%;
-                transform:translate(-50%,0);
-                border-radius: 10px 10px 0 0;
-                object-fit: cover;
-                width: 100%;
-                height: 65%;
-            }
-        }
-        .yarpp-thumbnail-title{
-            margin-top: 180px;
-            font-weight: normal;
-            font-size: 17px;
-            width: 100%;
-            margin-bottom: 0;
-            margin-right: 0;
-            margin-left: 0;
-        }
-        }
+        
         .page-nav{
             display: flex;
             justify-content: space-between;
