--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -5,7 +5,7 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 30px;
-        background: #F7F7F7;
+        background: #fff;
         @include pc{
         height: 235px;
         justify-content: flex-start;
@@ -284,7 +284,7 @@
                 margin: 0;
                 box-shadow: $shadow;
                 img{
-                    opacity: 0.7;
+                    opacity: 0.6;
                     margin: 0;
                     position:absolute;
                     top:0;
@@ -295,12 +295,17 @@
                     width: 100%;
                     height: 100%;
                 }
-                p{
+                div{
                     position: absolute;
-                    span{
-                        padding-bottom: 10px;
+                    padding: 20px;
+                    p{
+                        margin-bottom: 10px;
+                        margin-top: 0;
                     }
                 }
+            }
+            &Title{
+                font-size: 17px;
             }
         }
         
