--- a/themes/my7chakras/sass/style.scss
+++ b/themes/my7chakras/sass/style.scss
@@ -67,3 +67,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "episodes";
 @import "blog";
+@import "contact";
