--- a/themes/my7chakras/sass/_forms.scss
+++ b/themes/my7chakras/sass/_forms.scss
@@ -88,13 +88,19 @@ textarea {
 
 .contact-forms{
 	input{
-		opacity: 0.05;
-		background-color: $purple;
+		background-color: rgba(50, 49, 132, 0.055);
+		padding: 5%;
+		border-color: transparent;
+
 	}
 
 	textarea{
-		opacity: 0.05;
-		background-color: $purple;
+		border-color: transparent;
+		background-color: rgba(50, 49, 132, 0.055);
+		padding: 5%;
+		@include pcandtb{
+			height: 146px;
+		}
 	}
 
 	.wpcf7-submit{
@@ -102,5 +108,6 @@ textarea {
 		background-color: $purple;
 		box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
 		width: 100%;
+		height: 53.3px;
 	}
 }
