--- a/themes/my7chakras/sass/_about.scss
+++ b/themes/my7chakras/sass/_about.scss
@@ -10,21 +10,42 @@
     background-color: #ffffff;
 
     @include pcandtb{
+        background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Mask-Group-35@2x.png);
+        background-repeat: no-repeat;
+        background-position: 100% 96%;
+        padding-top: 90px;
+        height: 403px;
         width: 100%;
-        height: 339px;
+        object-fit: contain;
+        
+       
     }
 }
 
+
+.support-wrap{
+    display: flex;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: auto;
+}
 
 
 h1{
     position: absolute;
     top: 200px;
-    
+    margin: auto;
+
+    @include pcandtb{
+        padding-left: 350px;
+        padding-top: 80px;
+    }
+
+
 }
 
 h2{
-    width: 300px;
+    // width: 300px;
     font-family: Meticula;
     font-size: 15px;
     font-weight: normal;
@@ -34,7 +55,7 @@ h2{
     letter-spacing: 0.06px;
     text-align: left;
     color: #212121;
-
+    margin: auto;
     @include pcandtb {
         width: 731px;
         font-size: 20px;
@@ -46,7 +67,7 @@ h2{
 }
 
 h3{
-    
+    text-align: center!important;
     height: 24px;
     font-size: 22px;
     font-stretch: normal;
@@ -55,6 +76,7 @@ h3{
     letter-spacing: 0.22px;
     text-align: left;
     color: #3f3f3f;
+    margin: auto;
 }
 
 h6{
@@ -70,11 +92,12 @@ h6{
     letter-spacing: 0.06px;
     text-align: center;
     color: #212121;
-   
+    margin: auto;
+
 }
 
 p{
-    
+    margin: auto;
     font-size: 17px;
     letter-spacing: normal;
     color: #3f3f3f;
@@ -89,6 +112,9 @@ p{
 
 
 }
+figure{
+    text-align: center;
+}
 
 figcaption{
     text-align: center;
@@ -99,6 +125,18 @@ figcaption{
     line-height: 1.18;
     letter-spacing: 0.15px;
     color: #3f3f3f;
+    display: block!important;
 
+}
+.entry-content{
+    @include content-wrapper;
+}
+.row-one{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.eachvalue-wrap{
+    margin: 20px;
 }
 }
