--- a/themes/my7chakras/sass/_aboutaj.scss
+++ b/themes/my7chakras/sass/_aboutaj.scss
@@ -11,8 +11,15 @@
         background-color: #ffffff;
     
         @include pcandtb{
+            background-image: url(http://localhost/my7chakras/wp-content/uploads/2020/03/Mask-Group-35@2x.png);
+            background-repeat: no-repeat;
+            background-position: 100% 96%;
+            padding-top: 90px;
+            height: 403px;
             width: 100%;
-            height: 339px;
+            object-fit: contain;
+            
+           
         }
     }
 
@@ -51,6 +58,25 @@ h1{
     }
  
     
+}
+
+.gradient-box{
+    height: 466.1px;
+    background-image:  linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(122deg, #2f41a4 -58%, #323184 -18%, #4d449c 14%, #915990 46%, #ac5f80 79%, #ac5d5b 113%);
+}
+img{
+    width: 254px;
+}
+
+h6{
+   
+    font-family: MazzardH-Bold-H;
+    font-size: 32px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    text-align: center;
+    color: #ffffff;
 }
 
 h3{
