--- a/themes/my7chakras/sass/_blog.scss
+++ b/themes/my7chakras/sass/_blog.scss
@@ -313,25 +313,25 @@
                 font-size: 17px;
             }
         }
-        &__relatedList{
-            // display: flex;
-            // justify-content: space-between;
-        }
         &__related{
             &Item{
             border-radius: 10px;
             box-shadow: $shadow;
             display: flex;
             justify-content: space-between;
-            margin-bottom: 30px;
             background: #fff;
             margin-bottom: 40px;
             flex-direction: column;
             @include pc{
                 width: 30%;
+                margin-right: 10px;
+                margin-left: 10px;
             }
             @include spandtb{
                 width: 100%;
+            }
+            .carousel-cell{
+                width: 33%;
             }
         }
             &Img{
@@ -386,9 +386,9 @@
                 }
             }
             &Content{
-                width: 70%;
+                    width: 70%;
                     padding: 10px 10px 20px;
-                    width: 100%;
+                    height: 30vh;
             }
             &Excerpt{
                 margin-bottom: 40px;
